--- a/package.json
+++ b/package.json
@@ -11,12 +11,30 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
-  "homepage": "https://kalips0o.github.io/portfolio/",
-  "devDependencies": {
-    "prop-types": "^15.8.1"
-  },
   "dependencies": {
-    "framer-motion": "^11.11.17",
+    "@emailjs/browser": "^4.4.1",
+    "framer-motion": "^10.12.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-vertical-timeline-component": "^3.6.0"
-  }
+  },
+  "devDependencies": {
+    "@react-three/drei": "^9.117.3",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.38.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.3.4",
+    "gh-pages": "^5.0.0",
+    "postcss": "^8.4.23",
+    "prop-types": "^15.8.1",
+    "react-router-dom": "^7.0.0",
+    "tailwindcss": "^3.3.2",
+    "typewriter-effect": "^2.21.0",
+    "vite": "^4.3.2"
+  },
+  "homepage": "https://kalips0o.github.io/portfolio/"
 }
